Set loader div to display none initially
Hide loader div by default using inline style.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <!-- ═══════════════════════════════════════ LOADER ══ -->
-  <div class="loader" id="loader">
+  <div class="loader" id="loader" style="display:none">
     <div class="loader__inner">
       <div class="loader__symbol">✦</div>
       <p class="loader__text">Handcrafted Jewellery by Praju</p>
