Added personal details

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<meta name="description" content="Handcrafted Jewellery by Praju — Artisan mangalsutra, earrings, nath & custom pieces. Made with love in Pune, India."/>
+<meta name="description" content="Handcrafted Jewellery by Praju — Artisan mangalsutra, earrings, nath & custom pieces. Made with love in Navi Mumbai, India. Contact: craftedbypraju@gmail.com"/>
 <meta property="og:title" content="Handcrafted Jewellery by Praju"/>
 <meta property="og:description" content="Artisan mangalsutra sets, pearl earrings, nath & custom jewellery. Shop handmade Indian jewellery."/>
 <meta property="og:image" content="images/floral-mangalsutra-set.jpg"/>
@@ -423,7 +423,7 @@ footer{background:var(--ink)}
   <div class="hero-content">
     <span class="hero-tag">✦ Handcrafted with love, worn with pride ✦</span>
     <h1>Jewellery that<br/><em>tells your story</em></h1>
-    <p class="hero-sub">Handmade mangalsutra, pearl earrings, nath &amp; custom pieces<br/>crafted with love in Pune, India 💛</p>
+    <p class="hero-sub">Handmade mangalsutra, pearl earrings, nath &amp; custom pieces<br/>crafted with love in Navi Mumbai, India 💛</p>
     <div class="hero-btns">
       <a href="#collections" class="btn bg">Shop Collection</a>
       <a href="#custom" class="btn bgh">Custom Order ✦</a>
@@ -477,7 +477,7 @@ footer{background:var(--ink)}
     </div>
     <div class="pgrid" id="pGrid"></div>
     <div class="tc">
-      <a href="https://wa.me/919999999999?text=Hi%20Praju!%20I%20want%20to%20see%20more%20jewellery%20%F0%9F%92%9B" target="_blank" class="btn bo">See All on WhatsApp ↗</a>
+      <a href="https://wa.me/918369643615?text=Hi%20Praju!%20I%20want%20to%20see%20more%20jewellery%20%F0%9F%92%9B" target="_blank" class="btn bo">See All on WhatsApp ↗</a>
     </div>
   </div>
 </section>
@@ -509,7 +509,7 @@ footer{background:var(--ink)}
     </div>
   </div>
   <div class="cnt tc" style="margin-top:2rem">
-    <a href="https://wa.me/919999999999" target="_blank" class="btn bwa">Order a Piece Like This ✦</a>
+    <a href="https://wa.me/918369643615" target="_blank" class="btn bwa">Order a Piece Like This ✦</a>
   </div>
 </section>
 
@@ -527,14 +527,14 @@ footer{background:var(--ink)}
       <div>
         <span class="eyebrow">✦ Our Story ✦</span>
         <h2 class="ttl">Born from<br/><em>passion for craft</em></h2>
-        <p class="story-body">What started as a hobby — bending wire, stringing pearls, setting stones by hand — became something much bigger. Every mangalsutra pendant, every earring, every nath is a tiny universe crafted by hand in Pune.</p>
+        <p class="story-body">What started as a hobby — bending wire, stringing pearls, setting stones by hand — became something much bigger. Every mangalsutra pendant, every earring, every nath is a tiny universe crafted by hand in Navi Mumbai.</p>
         <p class="story-body">Praju jewellery is for the woman who notices details. The one who loves pieces with a story. We make jewellery that becomes part of your story — handmade, never mass produced.</p>
         <div class="pillars">
           <div class="pillar"><span class="pli">🤲</span><div><strong>Made by Hand</strong><p>Every piece crafted individually — no machines, no mass production</p></div></div>
           <div class="pillar"><span class="pli">🌿</span><div><strong>Skin-Safe Materials</strong><p>Anti-tarnish coating, quality pearls, responsibly sourced stones</p></div></div>
-          <div class="pillar"><span class="pli">💛</span><div><strong>Made in Pune</strong><p>Rooted in Indian tradition, designed for today's woman</p></div></div>
+          <div class="pillar"><span class="pli">💛</span><div><strong>Made in Navi Mumbai</strong><p>Rooted in Indian tradition, designed for today's woman</p></div></div>
         </div>
-        <a href="https://wa.me/919999999999" target="_blank" class="btn bg">Chat with Praju ↗</a>
+        <a href="https://wa.me/918369643615" target="_blank" class="btn bg">Chat with Praju ↗</a>
       </div>
     </div>
   </div>
@@ -574,7 +574,7 @@ footer{background:var(--ink)}
           <li>✦ Colour-matched pieces (send us your outfit!)</li>
           <li>✦ Bulk orders for events &amp; corporates</li>
         </ul>
-        <a href="https://wa.me/919999999999?text=Hi%20Praju!%20I%20want%20a%20custom%20jewellery%20order%20%F0%9F%92%9B" target="_blank" class="btn bg">Start Custom Order on WhatsApp</a>
+        <a href="https://wa.me/918369643615?text=Hi%20Praju!%20I%20want%20a%20custom%20jewellery%20order%20%F0%9F%92%9B" target="_blank" class="btn bg">Start Custom Order on WhatsApp</a>
         <p class="cnote">Turnaround: 3–5 days • Starts at ₹299</p>
       </div>
       <div class="fcard">
@@ -648,17 +648,21 @@ footer{background:var(--ink)}
         <h2 class="ttl">Let's talk<br/><em>jewellery</em></h2>
         <p class="cbdy">Whether you have a question, want a custom piece, or just want to say hi — we love hearing from you. Reply time under 2 hours on WhatsApp.</p>
         <div class="cmeths">
-          <a href="https://wa.me/919999999999" target="_blank" class="cm cm-wa">
+          <a href="https://wa.me/918369643615" target="_blank" class="cm cm-wa">
             <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/></svg>
-            <div><strong>WhatsApp</strong><span>+91 99999 99999</span></div>
+            <div><strong>WhatsApp</strong><span>+91 83696 43615</span></div>
           </a>
           <a href="https://instagram.com/praju.jewellery" target="_blank" class="cm cm-ig">
             <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/></svg>
             <div><strong>Instagram</strong><span>@praju.jewellery</span></div>
           </a>
+          <a href="mailto:craftedbypraju@gmail.com" class="cm">
+            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><rect x="2" y="4" width="20" height="16" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg>
+            <div><strong>Email</strong><span>craftedbypraju@gmail.com</span></div>
+          </a>
           <div class="cm">
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z"/><circle cx="12" cy="10" r="3"/></svg>
-            <div><strong>Location</strong><span>Pune, Maharashtra, India</span></div>
+            <div><strong>Location</strong><span>Navi Mumbai, Maharashtra, India</span></div>
           </div>
         </div>
       </div>
@@ -690,7 +694,7 @@ footer{background:var(--ink)}
       <p class="fmr">हस्तनिर्मित दागिने, प्रेमाने घडवलेले.</p>
       <div class="fsoc">
         <a href="https://instagram.com/praju.jewellery" target="_blank">📷</a>
-        <a href="https://wa.me/919999999999" target="_blank">💬</a>
+        <a href="https://wa.me/918369643615" target="_blank">💬</a>
       </div>
     </div>
     <div class="fc"><h4>Shop</h4><ul>
@@ -713,13 +717,13 @@ footer{background:var(--ink)}
     </ul></div>
   </div></div></div>
   <div class="ft-bot"><div class="cnt"><div class="ft-bot-in">
-    <span>© 2025 Handcrafted Jewellery by Praju. All rights reserved.</span>
-    <span>Made with 💛 in Pune, India</span>
+    <span>© 2025 Handcrafted Jewellery by Praju · craftedbypraju@gmail.com</span>
+    <span>Made with 💛 in Navi Mumbai, India</span>
   </div></div></div>
 </footer>
 
 <!-- WA FAB -->
-<a href="https://wa.me/919999999999?text=Hi%20Praju!%20I%20saw%20your%20website%20%F0%9F%92%9B%20I%27d%20like%20to%20know%20more!" target="_blank" class="wafab">
+<a href="https://wa.me/918369643615?text=Hi%20Praju!%20I%20saw%20your%20website%20%F0%9F%92%9B%20I%27d%20like%20to%20know%20more!" target="_blank" class="wafab">
   <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/></svg>
   <span>Chat with us</span>
 </a>
@@ -795,7 +799,7 @@ function updateCartUI() {
     cart.map(i => `• ${i.name} × ${i.qty} = ${fmt(i.price*i.qty)}`).join('\n') +
     `\n\n*Total: ${fmt(total)}*\n\nPlease share payment details!`
   );
-  document.getElementById('waOut').href = `https://wa.me/919999999999?text=${msg}`;
+  document.getElementById('waOut').href = `https://wa.me/918369643615?text=${msg}`;
 }
 
 function addToCart(id) {
@@ -882,7 +886,7 @@ function submitForm(e) {
   const idea = document.getElementById('fi').value;
   const budget = document.getElementById('fb').value;
   const msg = encodeURIComponent(`Hi Praju! 💛 Custom order request!\n\n*Name:* ${name}\n*Phone:* ${phone}\n*Type:* ${type||'Not specified'}\n*Idea:* ${idea||'Will share on chat'}\n*Budget:* Up to ₹${parseInt(budget).toLocaleString('en-IN')}`);
-  window.open(`https://wa.me/919999999999?text=${msg}`, '_blank');
+  window.open(`https://wa.me/918369643615?text=${msg}`, '_blank');
   showToast('Opening WhatsApp ✦');
   e.target.reset();
   document.getElementById('fbv').textContent = '999';
