Update Instagram handle from @praju.jewellery to @praju.handcrafted

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@ footer{background:var(--ink)}
 <section class="insta">
   <div class="cnt">
     <div class="insta-hdr">
-      <span class="eyebrow">✦ @praju.jewellery ✦</span>
+      <span class="eyebrow">✦ @praju.handcrafted ✦</span>
       <h2 class="ttl">As seen on Instagram</h2>
       <a href="https://instagram.com/praju.jewellery" target="_blank" class="btn bo">Follow for Daily Drops</a>
     </div>
